[BUGFIX] Menu in sticky menu shows collapse button
This is a subtle detail but when the menu is sticky
and the lines between main modules are hovered the
line turns blue because of the collapse button changes
background color.

Reviewed-on: https://review.typo3.org/25854
Tested-by: Aske Ertmann
Original-Commit-Hash: 03029fca1249ef8385b4ef664c765ad1e24f6537

--- a/TYPO3.Neos/Resources/Private/Styles/Menu/_MenuPanel.scss
+++ b/TYPO3.Neos/Resources/Private/Styles/Menu/_MenuPanel.scss
@@ -123,6 +123,10 @@
 			&:hover {
 				background-color: $blue;
 				color: #fff;
+
+				.neos-menu-panel-sticky & {
+					background-color: transparent;
+				}
 			}
 
 			&::before {
